--- a/package.json
+++ b/package.json
@@ -30,14 +30,11 @@
   "description": "Just you wait folks!",
   "main": "app.js",
   "keywords": [],
-  "author": "Salah Eddine Lalami",
+  "author": "Shaibal Chakraborty",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/idurar/starter-antd-admin-crud-auth-mern.git"
+    "url": "https://github.com/shabfactor/customer-crm.git"
   },
-  "bugs": {
-    "url": "https://github.com/idurar/starter-antd-admin-crud-auth-mern/issues"
-  },
-  "homepage": "https://github.com/idurar/starter-antd-admin-crud-auth-mern#readme"
+  "homepage": ""
 }
